--- a/examples/python/core/hashmap.ipynb
+++ b/examples/python/core/hashmap.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Hash map\n",
+    "A hash map is a data structure that maps keys to values with amortized O(1) insertion, find, and deletion time. The map is unordered.\n",
+    "\n",
+    "- Keys: The Open3D hash map in supports multi-dimensional keys. By default up to 6D coordinates in integer. Due to precision issue, floating point is not recommended to be regarded as keys. For higher dimensions, you may modify the macros and compile from source in [this file](https://github.com/isl-org/Open3D/blob/master/cpp/open3d/core/hashmap/Dispatch.h#L34).\n",
+    "- Values: The Open3D hash map in supports valus in arbitrary dimension and arbitrary data types.\n",
+    "- Devices: Both CPU and CUDA are supported. The CPU hashmap is based on [TBB](https://github.com/oneapi-src/oneTBB), while the CUDA hash map is based upon [stdgpu](https://github.com/stotko/stdgpu)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -17,18 +29,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hash map\n",
-    "A hash map is a data structure that seeks to map sparse keys (e.g.unbounded indices, strings, coordinates) from the key set K to values from the value set V with amortized O(1) access. The map is unordered.\n",
-    "\n",
-    "A hash map in Open3D supports multi-dimensional coordinates as keys, and the combination of arbitrary types as values. By default we support up to 6D coordinates in integer (due to precision issue, floating point is not recommended to be regarded as keys). For higher dimensions, you may modify the macros and compile from source in [this file](https://github.com/isl-org/Open3D/blob/master/cpp/open3d/core/hashmap/Dispatch.h#L34). Both CPU and CUDA are supported -- the CUDA hash map is optimized upon [stdgpu](https://github.com/stotko/stdgpu), while the CPU version is less optimized upon [tbb's concurrent_unordered_map](https://github.com/oneapi-src/oneTBB)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## A simple example\n",
-    "We can first create a simple hash map from integers to integers:"
+    "We first create a simple hash map from integers to integers:"
    ]
   },
   {
@@ -39,9 +41,9 @@
    "source": [
     "hashmap = o3c.HashMap(capacity,\n",
     "                      key_dtype=o3c.int64,\n",
-    "                      key_element_shape=(1),\n",
+    "                      key_element_shape=(),\n",
     "                      value_dtype=o3c.int64,\n",
-    "                      value_element_shape=(1),\n",
+    "                      value_element_shape=(),\n",
     "                      device=device)"
    ]
   },
@@ -50,7 +52,9 @@
    "metadata": {},
    "source": [
     "### Insertion\n",
-    "Insertion is a tensor-based operation. Two tensors of the same length can be inserted, with the same dtype and element shape as initialized in the hash map."
+    "Next we show how to insert a batch of (key, value) pairs. You'll need to prepare two tensors:\n",
+    "- The `keys` tensor contains all keys. The `keys` tensor must be on the same device as the hash map. The shape of the `keys` tensor is `key_elment_shape` with `N` prefixed to the front. For example if `key_element_shape == ()`, `keys.shape == (N,)`; if `key_element_shape == (3,)`, `keys.shape == (N, 3).`; if `key_element_shape == (8, 8, 8)`, `keys.shape == (N, 8, 8, 8).`\n",
+    "- The `vals` tensor contains all values. The `vals` tensor must be on the same device as the hash map. The shape of the `vals` tensor is `val_elment_shape` with `N` prefixed to the front. For example if `val_elment_shape == ()`, `vals.shape == (N,)`; if `val_elment_shape == (3,)`, `vals.shape == (N, 3).`; if `val_elment_shape == (8, 8, 8)`, `vals.shape == (N, 8, 8, 8).`"
    ]
   },
   {
@@ -70,7 +74,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, `masks` indicate whether the element is successfully inserted. Duplicates will be skipped, the same as in general hash maps. **Be notified that since the insertion runs in parallel, we cannot guarantee which one is regarded as the duplicate** (e.g., input key at index 0 or index -1). \n",
+    "Here, the `masks` mask indicate whether a (key, value) pair is successfully inserted. A mask of value `True` means the insertion is successful and `False` if the insertion is skipped.\n",
+    "\n",
+    "Unsucceful insertion happens and only happens when there are duplicated keys. If there are duplictaed keys, it is guaranteed that only **one** of the duplicated keys and its corresponding value will be inserted. That is, for a set of duplicated keys, one and only one will get a `True` mask. Since the insertion runs in parallel, there is no gurantee **which one** of the duplicated keys will be inserted. That is, for a set of duplicated keys, we don't know which key gets the `True` mask.\n",
     "\n",
     "Using advanced indexing, we can obtain which keys are actually inserted:"
    ]
@@ -78,16 +84,18 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "masks: [True True True True True False False]\n",
-      "Tensor[shape={7}, stride={1}, Bool, CPU:0, 0x55e6fe452110]\n",
+      "Tensor[shape={7}, stride={1}, Bool, CPU:0, 0x5566e587d8a0]\n",
       "inserted keys: [100 200 400 800 300]\n",
-      "Tensor[shape={5}, stride={1}, Int64, CPU:0, 0x55e6fe4521e0]\n"
+      "Tensor[shape={5}, stride={1}, Int64, CPU:0, 0x5566e5108130]\n"
      ]
     }
    ],
@@ -100,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then we detail the usage of `buf_indices`. In our hash map, keys and values are stored in contiguous buffer tensors that could be conveniently accessed by indices. Instead of returning iterators that are less friendly to vectorized programming, we return such buffer indices. **Note these indices are not necesserily the same as input indices due to concurrency.** Also, the indices are by default stored in int32 due to the underlying implementations. **A conversion to int64 is required for advanced indexing**."
+    "Next, let's look at the usage of `buf_indices`. In our hash map, keys and values are stored in contiguous buffer tensors that could be conveniently accessed by indices. Instead of returning iterators that are less friendly to vectorized programming, we return such buffer indices. **Note these indices are not necesserily the same as input indices due to concurrency.** Also, the indices are by default stored in int32 due to the underlying implementations. **A conversion to int64 is required for advanced indexing**."
    ]
   },
   {
@@ -112,20 +120,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "buffer indices: [0 1 3 4 2]\n",
-      "Tensor[shape={5}, stride={1}, Int64, CPU:0, 0x55e6fd550640]\n",
-      "inserted keys: [[100],\n",
-      " [200],\n",
-      " [400],\n",
-      " [800],\n",
-      " [300]]\n",
-      "Tensor[shape={5, 1}, stride={1, 1}, Int64, CPU:0, 0x55e6fd550fe0]\n",
-      "inserted values: [[1],\n",
-      " [2],\n",
-      " [4],\n",
-      " [8],\n",
-      " [3]]\n",
-      "Tensor[shape={5, 1}, stride={1, 1}, Int64, CPU:0, 0x55e6fe4521e0]\n"
+      "buffer indices: [0 3 1 2 4]\n",
+      "Tensor[shape={5}, stride={1}, Int64, CPU:0, 0x5566e46f9380]\n",
+      "inserted keys: [100 200 400 800 300]\n",
+      "Tensor[shape={5}, stride={1}, Int64, CPU:0, 0x5566e5108130]\n",
+      "inserted values: [1 2 4 8 3]\n",
+      "Tensor[shape={5}, stride={1}, Int64, CPU:0, 0x5566e5884920]\n"
      ]
     }
    ],
@@ -159,12 +159,9 @@
      "output_type": "stream",
      "text": [
       "found valid keys: [100 300 200 100]\n",
-      "Tensor[shape={4}, stride={1}, Int64, CPU:0, 0x55e6fe453730]\n",
-      "found valid values: [[1],\n",
-      " [3],\n",
-      " [2],\n",
-      " [1]]\n",
-      "Tensor[shape={4, 1}, stride={1, 1}, Int64, CPU:0, 0x55e6fd550e90]\n"
+      "Tensor[shape={4}, stride={1}, Int64, CPU:0, 0x5566e58851d0]\n",
+      "found valid values: [1 3 2 1]\n",
+      "Tensor[shape={4}, stride={1}, Int64, CPU:0, 0x5566e5884890]\n"
      ]
     }
    ],
@@ -229,9 +226,9 @@
      "output_type": "stream",
      "text": [
       "erase masks: [True False False]\n",
-      "Tensor[shape={3}, stride={1}, Bool, CPU:0, 0x55e6fe44c980]\n",
+      "Tensor[shape={3}, stride={1}, Bool, CPU:0, 0x5566e5703680]\n",
       "erased keys: [100]\n",
-      "Tensor[shape={1}, stride={1}, Int64, CPU:0, 0x55e6fe45c060]\n"
+      "Tensor[shape={1}, stride={1}, Int64, CPU:0, 0x5566e46f9e90]\n"
      ]
     }
    ],
@@ -258,16 +255,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "all active keys [[300],\n",
-      " [200],\n",
-      " [400],\n",
-      " [800]]\n",
-      "Tensor[shape={4, 1}, stride={1, 1}, Int64, CPU:0, 0x55e6fe45a760]\n",
-      "all active values: [[3],\n",
-      " [2],\n",
-      " [4],\n",
-      " [8]]\n",
-      "Tensor[shape={4, 1}, stride={1, 1}, Int64, CPU:0, 0x55e6fd550800]\n"
+      "all active keys [300 200 400 800]\n",
+      "Tensor[shape={4}, stride={1}, Int64, CPU:0, 0x5566e587d0d0]\n",
+      "all active values: [3 2 4 8]\n",
+      "Tensor[shape={4}, stride={1}, Int64, CPU:0, 0x5566e58847b0]\n"
      ]
     }
    ],
@@ -292,20 +283,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "all active keys [[300],\n",
-      " [1000],\n",
-      " [200],\n",
-      " [400],\n",
-      " [0],\n",
-      " [800]]\n",
-      "Tensor[shape={6, 1}, stride={1, 1}, Int64, CPU:0, 0x55e6fe4532f0]\n",
-      "all active values: [[3],\n",
-      " [10],\n",
-      " [2],\n",
-      " [4],\n",
-      " [0],\n",
-      " [8]]\n",
-      "Tensor[shape={6, 1}, stride={1, 1}, Int64, CPU:0, 0x55e6fd550750]\n"
+      "all active keys [300 1000 200 400 0 800]\n",
+      "Tensor[shape={6}, stride={1}, Int64, CPU:0, 0x5566e46f9410]\n",
+      "all active values: [3 10 2 4 10 8]\n",
+      "Tensor[shape={6}, stride={1}, Int64, CPU:0, 0x5566e46fa560]\n"
      ]
     }
    ],
@@ -342,54 +323,16 @@
       "capacity: 10\n",
       "size: 9\n",
       "capacity: 10\n",
-      "all active keys [[300],\n",
-      " [1500],\n",
-      " [700],\n",
-      " [1000],\n",
-      " [200],\n",
-      " [400],\n",
-      " [1200],\n",
-      " [0],\n",
-      " [800]]\n",
-      "Tensor[shape={9, 1}, stride={1, 1}, Int64, CPU:0, 0x55e6fe45d1e0]\n",
-      "all active values: [[3],\n",
-      " [-1],\n",
-      " [7],\n",
-      " [10],\n",
-      " [2],\n",
-      " [4],\n",
-      " [12],\n",
-      " [0],\n",
-      " [8]]\n",
-      "Tensor[shape={9, 1}, stride={1, 1}, Int64, CPU:0, 0x55e6fe463d60]\n",
+      "all active keys [300 1500 700 1000 200 400 1200 0 800]\n",
+      "Tensor[shape={9}, stride={1}, Int64, CPU:0, 0x5566e588b7b0]\n",
+      "all active values: [3 -1 7 10 2 4 12 10 8]\n",
+      "Tensor[shape={9}, stride={1}, Int64, CPU:0, 0x5566e50f9b40]\n",
       "size: 12\n",
       "capacity: 20\n",
-      "all active keys [[1700],\n",
-      " [300],\n",
-      " [1500],\n",
-      " [700],\n",
-      " [1000],\n",
-      " [200],\n",
-      " [1800],\n",
-      " [400],\n",
-      " [1200],\n",
-      " [1600],\n",
-      " [0],\n",
-      " [800]]\n",
-      "Tensor[shape={12, 1}, stride={1, 1}, Int64, CPU:0, 0x55e6fe45f1c0]\n",
-      "all active values: [[17],\n",
-      " [3],\n",
-      " [-1],\n",
-      " [7],\n",
-      " [10],\n",
-      " [2],\n",
-      " [18],\n",
-      " [4],\n",
-      " [12],\n",
-      " [16],\n",
-      " [0],\n",
-      " [8]]\n",
-      "Tensor[shape={12, 1}, stride={1, 1}, Int64, CPU:0, 0x55e6fe460960]\n"
+      "all active keys [1700 300 1500 700 1000 200 1800 400 1200 1600 0 800]\n",
+      "Tensor[shape={12}, stride={1}, Int64, CPU:0, 0x5566e51164a0]\n",
+      "all active values: [17 3 -1 7 10 2 18 4 12 16 10 8]\n",
+      "Tensor[shape={12}, stride={1}, Int64, CPU:0, 0x5566e5116510]\n"
      ]
     }
    ],
@@ -428,8 +371,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12\n",
-      "100\n"
+      "size: 12\n",
+      "capacity: 100\n"
      ]
     }
    ],
@@ -461,10 +404,10 @@
     {
      "data": {
       "text/plain": [
-       "([2 1 0]\n",
-       " Tensor[shape={3}, stride={1}, Int32, CPU:0, 0x55e6fe45e620],\n",
+       "([0 2 1]\n",
+       " Tensor[shape={3}, stride={1}, Int32, CPU:0, 0x5566e5889280],\n",
        " [True True True]\n",
-       " Tensor[shape={3}, stride={1}, Bool, CPU:0, 0x55e6fe462960])"
+       " Tensor[shape={3}, stride={1}, Bool, CPU:0, 0x5566e58892c0])"
       ]
      },
      "execution_count": 13,
@@ -507,12 +450,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0 1 0]]\n",
-      "Tensor[shape={1, 3}, stride={3, 1}, Int32, CPU:0, 0x55e6fe46c480]\n",
-      "[[0 255 0]]\n",
-      "Tensor[shape={1, 3}, stride={3, 1}, UInt8, CPU:0, 0x55e6fe45b1e0]\n",
-      "[[0.9]]\n",
-      "Tensor[shape={1, 1}, stride={1, 1}, Float32, CPU:0, 0x55e6fe46c460]\n"
+      "found coordinates: [[0 1 0]]\n",
+      "Tensor[shape={1, 3}, stride={3, 1}, Int32, CPU:0, 0x5566e5894ac0]\n",
+      "found colors: [[0 255 0]]\n",
+      "Tensor[shape={1, 3}, stride={3, 1}, UInt8, CPU:0, 0x5566e58945f0]\n",
+      "found weights: [[0.9]]\n",
+      "Tensor[shape={1, 1}, stride={1, 1}, Float32, CPU:0, 0x5566e5894830]\n"
      ]
     }
    ],
@@ -531,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -541,15 +484,15 @@
       "all active keys: [[0 1 0],\n",
       " [3 4 1],\n",
       " [-1 2 3]]\n",
-      "Tensor[shape={3, 3}, stride={3, 1}, Int32, CPU:0, 0x55e6fe45e050]\n",
+      "Tensor[shape={3, 3}, stride={3, 1}, Int32, CPU:0, 0x5566e588e890]\n",
       "active value 0: [[0 255 0],\n",
       " [255 0 0],\n",
       " [255 255 0]]\n",
-      "Tensor[shape={3, 3}, stride={3, 1}, UInt8, CPU:0, 0x55e6fe46c880]\n",
+      "Tensor[shape={3, 3}, stride={3, 1}, UInt8, CPU:0, 0x5566e5895af0]\n",
       "active value 1: [[0.9],\n",
       " [0.3],\n",
       " [0.1]]\n",
-      "Tensor[shape={3, 1}, stride={1, 1}, Float32, CPU:0, 0x55e6fe46c520]\n"
+      "Tensor[shape={3, 1}, stride={1, 1}, Float32, CPU:0, 0x5566e5895bb0]\n"
      ]
     }
    ],
@@ -586,13 +529,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[5],\n",
+      "active keys: [[5],\n",
       " [9],\n",
       " [1],\n",
       " [3],\n",
       " [11],\n",
       " [7]]\n",
-      "Tensor[shape={6, 1}, stride={1, 1}, Int64, CPU:0, 0x55e6fe4532f0]\n"
+      "Tensor[shape={6, 1}, stride={1, 1}, Int64, CPU:0, 0x5566e46f9410]\n"
      ]
     }
    ],
@@ -620,7 +563,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -634,7 +577,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
