--- a/docs/jupyter/geometry/ray_casting.ipynb
+++ b/docs/jupyter/geometry/ray_casting.ipynb
@@ -3,6 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "nbsphinx": "hidden",
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "import open3d as o3d\n",
     "import numpy as np\n",
@@ -15,98 +20,97 @@
     "import open3d_tutorial\n",
     "# change to True if you want to interact with the visualization windows\n",
     "open3d_tutorial.interactive = not \"CI\" in os.environ"
-   ],
-   "outputs": [],
-   "metadata": {
-    "nbsphinx": "hidden",
-    "tags": []
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Ray Casting"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "The `RaycastingScene` class in Open3D provides basic ray casting functionality.\n",
-    "In this tutorial we show how to create a scene and do ray intersection tests."
-   ],
-   "metadata": {}
+    "In this tutorial we show how to create a scene and do ray intersection tests. \n",
+    "You can also use `RaycastingScene` to create a virtual point cloud from a mesh, \n",
+    "such as from a CAD model."
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**Initialization**"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "As the first step we initialize a `RaycastingScene` with one or more triangle meshes."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Load mesh and convert to open3d.t.geometry.TriangleMesh\n",
     "cube = o3d.geometry.TriangleMesh.create_box().translate([0, 0, 0])\n",
     "cube = o3d.t.geometry.TriangleMesh.from_legacy(cube)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Create a scene and add the triangle mesh\n",
     "scene = o3d.t.geometry.RaycastingScene()\n",
     "cube_id = scene.add_triangles(cube)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "`add_triangles()` returns the ID for the added geometry.\n",
     "This ID can be used to identify which mesh is hit by a ray."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "print(cube_id)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**Casting rays**"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "We can now generate rays which are 6D vectors with origin and direction."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# We create two rays:\n",
     "# The first ray starts at (0.5,0.5,10) and has direction (0,0,-1).\n",
@@ -115,70 +119,70 @@
     "                       dtype=o3d.core.Dtype.Float32)\n",
     "\n",
     "ans = scene.cast_rays(rays)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "The result contains information about a possible intersection with the geometry in the scene."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "print(ans.keys())"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "- **t_hit** is the distance to the intersection. The unit is defined by the length of the ray direction. If there is no intersection this is *inf*\n",
     "- **geometry_ids** gives the id of the geometry hit by the ray. If no geometry was hit this is `RaycastingScene.INVALID_ID`\n",
     "- **primitive_ids** is the triangle index of the triangle that was hit or `RaycastingScene.INVALID_ID`\n",
     "- **primitive_uvs** is the barycentric coordinates of the intersection point within the triangle.\n",
     "- **primitive_normals** is the normal of the hit triangle."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "We can see from **t_hit** and **geometry_ids** that the first ray did hit the mesh but the second ray missed."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "print(ans['t_hit'].numpy(), ans['geometry_ids'].numpy())"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**Creating images**"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "We now create a scene with multiple objects"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Create meshes and convert to open3d.t.geometry.TriangleMesh\n",
     "cube = o3d.geometry.TriangleMesh.create_box().translate([0, 0, 0])\n",
@@ -193,23 +197,23 @@
     "scene.add_triangles(cube)\n",
     "scene.add_triangles(torus)\n",
     "_ = scene.add_triangles(sphere)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "`RaycastingScene` allows to organize rays with an arbitrary number of leading dimensions.\n",
     "For instance we can generate an array with shape `[h,w,6]` to organize rays for creating an image.\n",
     "The class also provides helper functions for creating rays for a pinhole camera.\n",
-    "The following creates rays Tensor with shape `[240,320,6]`."
-   ],
-   "metadata": {}
+    "The following creates rays Tensor with shape `[480,640,6]`."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "rays = o3d.t.geometry.RaycastingScene.create_rays_pinhole(\n",
     "    fov_deg=90,\n",
@@ -219,63 +223,87 @@
     "    width_px=640,\n",
     "    height_px=480,\n",
     ")\n",
-    "# Ee can directly pass the rays tensor to the cast_rays function.\n",
+    "# We can directly pass the rays tensor to the cast_rays function.\n",
     "ans = scene.cast_rays(rays)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "The output tensors preserve the shape of the rays and we can directly visualize the hit distance with matplotlib to get a depth map."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "plt.imshow(ans['t_hit'].numpy())"
-   ],
-   "outputs": [],
-   "metadata": {
-    "tags": []
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Furhter we can plot the other results to visualize the primitive normals, .."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# use abs to avoid negative values\n",
     "plt.imshow(np.abs(ans['primitive_normals'].numpy()))"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     ".. or the geometry IDs."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "plt.imshow(ans['geometry_ids'].numpy(), vmax=3)"
-   ],
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating a virtual point cloud\n",
+    "We can also use the hit distance to calculate the XYZ coordinates of the intersection points. These are the points that you would get by placing a virtual 3D sensor at the point of origin of the rays."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "hit = ans['t_hit'].isfinite()\n",
+    "points = rays[hit][:,:3] + rays[hit][:,3:]*ans['t_hit'][hit].reshape((-1,1))\n",
+    "pcd = o3d.t.geometry.PointCloud(points)\n",
+    "# Press Ctrl/Cmd-C in the visualization window to copy the current viewpoint\n",
+    "o3d.visualization.draw_geometries([pcd.to_legacy()], \n",
+    "                                  front=[0.5, 0.86, 0.125],\n",
+    "                                  lookat=[0.23, 0.5, 2],\n",
+    "                                  up=[-0.63, 0.45, -0.63],\n",
+    "                                  zoom=0.7)\n",
+    "# o3d.visualization.draw([pcd]) # new API"
+   ]
   }
  ],
  "metadata": {
@@ -294,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
